--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -7,11 +7,11 @@
     tools:context=".Menu">
 
     <TextView
+        android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textViewName"
-        android:textSize="30dp"
-        android:gravity="center"/>
+        android:gravity="center"
+        android:textSize="30dp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
